# path-planning-visualizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  path_planning_visualizer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
packaging/: PathPlanningVisualizer.spec  launcher.py
path_planning_visualizer/: __init__.py  app.py  benchmark.py  geometry.py  mapping.py  metrics.py  resources.py  types.py
path_planning_visualizer/gui/: __init__.py  canvas.py  main_window.py  map_picker.py  param_panels.py  worker.py
path_planning_visualizer/planners/: __init__.py  _rgg.py  _spatial.py  _trajectory.py  apf.py  astar.py  base.py  bit_star.py  bitrrt.py  chomp.py  dijkstra.py  fmt_star.py  genetic.py  gpmp.py  itomp.py  kpiece.py  prm.py  pso.py  registry.py  rrt.py  rrt_connect.py  rrt_star.py  sbl.py  stomp.py  trajopt.py
tests/: test_apf_fidelity.py  test_app.py  test_astar_fidelity.py  test_benchmark.py  test_bit_star_fidelity.py  test_bitrrt_fidelity.py  test_canvas.py  test_chomp_fidelity.py  test_dijkstra_fidelity.py  test_fmt_star_fidelity.py  test_geometry.py  test_gpmp_fidelity.py  test_gui_integration.py  test_gui_worker.py  test_headless_import.py  test_itomp_fidelity.py  test_kpiece_fidelity.py  test_mapping.py  test_metrics.py  test_optimality.py  test_planners.py  test_prm_fidelity.py  test_pso_fidelity.py  test_rgg.py  test_rrt_connect_fidelity.py  test_rrt_fidelity.py  test_rrt_star_fidelity.py  test_sbl_fidelity.py  test_spatial.py  test_stomp_fidelity.py  test_trajopt_fidelity.py
