[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "path-planning-visualizer"
version = "0.1.0b8"
description = "Interactive desktop app for comparing path-planning algorithms on occupancy-grid maps."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sebastian Matz" }]
keywords = ["path planning", "motion planning", "robotics", "RRT", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "PyQt6>=6.5",
]

[project.urls]
Homepage = "https://github.com/sebastianmatz/path-planning-visualizer"
Repository = "https://github.com/sebastianmatz/path-planning-visualizer"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
path-planning-visualizer = "path_planning_visualizer:main"

[tool.setuptools]
packages = [
    "path_planning_visualizer",
    "path_planning_visualizer.planners",
    "path_planning_visualizer.gui",
]
include-package-data = true

[tool.setuptools.package-data]
"path_planning_visualizer" = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
# Pyflakes ("F") catches the real problems (unused imports, undefined names,
# unused local variables).
select = ["F"]
