[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "path-planning-visualizer"
version = "0.1.0b10"
description = "Interactive desktop app for comparing path-planning algorithms on occupancy-grid maps."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sebastian Matz" }]
keywords = ["path planning", "motion planning", "robotics", "RRT", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "PyQt6>=6.5",
]

[project.urls]
Homepage = "https://github.com/sebastianmatz/path-planning-visualizer"
Repository = "https://github.com/sebastianmatz/path-planning-visualizer"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
path-planning-visualizer = "path_planning_visualizer:main"

[tool.setuptools]
packages = [
    "path_planning_visualizer",
    "path_planning_visualizer.planners",
    "path_planning_visualizer.gui",
]
include-package-data = true

[tool.setuptools.package-data]
"path_planning_visualizer" = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
# F (pyflakes) catches real bugs; I sorts imports; B (flake8-bugbear) flags likely
# bugs; SIM (flake8-simplify) tidies redundant constructs. Deliberately excluded:
# E501 (line length -- mostly docstrings/comments here) and N (naming -- it would
# fight the intentional paper math notation A, Q, K, R, Hs, ...).
select = ["F", "I", "B", "SIM"]
